@@ -39,7 +39,7 @@ class WC_Stripe_UPE_Availability_Note {
 		$message = sprintf(
 		/* translators: 1) HTML anchor open tag 2) HTML anchor closing tag */
 			__( 'Get early access to an improved checkout experience, now available to select merchants. %1$sLearn more%2$s.', 'woocommerce-gateway-stripe' ),
-			'<a href="https://woocommerce.com/document/stripe/#new-checkout-experience" target="_blank">',
+			'<a href="https://woocommerce.com/document/stripe/admin-experience/new-checkout-experience/" target="_blank">',
 			'</a>'
 		);
 		$note->set_content( $message );
