@@ -15,7 +15,7 @@ class WC_Stripe_UPE_Availability_Note_Test extends WP_UnitTestCase {
 			$note = WC_Stripe_UPE_Availability_Note::get_note();
 
 			$this->assertSame( 'Boost your sales with the new payment experience in Stripe', $note->get_title() );
-			$this->assertSame( 'Get early access to an improved checkout experience, now available to select merchants. <a href="https://woocommerce.com/document/stripe/#new-checkout-experience" target="_blank">Learn more</a>.', $note->get_content() );
+			$this->assertSame( 'Get early access to an improved checkout experience, now available to select merchants. <a href="https://woocommerce.com/document/stripe/admin-experience/new-checkout-experience/" target="_blank">Learn more</a>.', $note->get_content() );
 			$this->assertSame( 'info', $note->get_type() );
 			$this->assertSame( 'wc-stripe-upe-availability-note', $note->get_name() );
 			$this->assertSame( 'woocommerce-gateway-stripe', $note->get_source() );
